Fin des tests + Génération des rapports Jacoco + Surefire